<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hobbs Utilities</string>
    <string name="title_convert">Convert</string>
    <string name="title_quick_add">Quick Add</string>
    <string name="title_wx">Weather</string>
    <string name="title_soda">Drink Bag</string>
    <string name="introduction">Conversion Intro</string>
    <string name="action_settings">Settings</string>
    <string name="departure_point_help">DEP</string>
    <string name="arrival_point_help">ARR</string>
    <string name="instrument_time_label">Inst.</string>
    <string name="approach_type_label">Appr.</string>
    <string name="start_time_help">Block Out</string>
    <string name="end_time_help">Block In</string>
    <string name="reset_button_text">Reset</string>
    <string name="clear_button_text">Clear</string>
    <string name="invalid_times">Invalid time entry!</string>
    <string name="quick_add_intro">Quick Add: Type in hobbs times in quick succession. Tap a time in the tally to subtract it.</string>
    <string name="quick_add_reset_button">Reset</string>
    
    <!-- wx strings -->
    <string name="loading">Nothing yet...</string>
    <string name="airplane_mode">You\'re in airplane mode - unable to get weather!</string>
	<string name="pref_default_station">Default Station</string>
	<string name="pref_default_station_key">station</string>
	<string name="pref_default_soda_station_key">soda_station</string>
	<string name="btn_station">Change Station</string>
	<string name="btn_refresh">Refresh</string>
	<string name="no_data_for_station">No data for station </string>
	<string name="taf_raw_text_field">raw_text</string>
	<string name="station_entry_title">Enter an ICAO station identifier:</string>

</resources>
