<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kemblep.hobbsutilities.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction" />
    <TextView
	        android:id="@+id/times_result"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/introduction"
	        android:layout_centerHorizontal="true"
	        android:textSize="30sp" />
	        
	    <TextView 
	        android:id="@+id/total"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_below="@+id/times_result"
			android:layout_centerHorizontal="true"
	        android:textSize="30sp" />"
	    
	    <EditText
	        android:id="@+id/departure_point"
	        android:minEms="4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/times_result"
	        android:hint="@string/departure_point_help"
	        android:inputType="textCapCharacters" />
	    
	    <EditText
	        android:id="@+id/arrival_point"
	        android:minEms="4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/departure_point"
	        android:hint="@string/arrival_point_help"
	        android:inputType="textCapCharacters" />

	    <EditText
	        android:id="@+id/start_time_entry"
	        android:minEms="4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/times_result"
	        android:hint="@string/start_time_help"
	        android:inputType="number" />
	    
	    <EditText
	        android:id="@+id/end_time_entry"
	        android:minEms="4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/start_time_entry"
	        android:hint="@string/end_time_help"
	        android:inputType="number" />
	    
	    <Spinner
	        android:id="@+id/instrument_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/start_time_entry" />
	    
	    <Spinner
	        android:id="@+id/approach_type"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRighttOf="@+id/end_time_entry" />

	    <Button
	        android:id="@+id/oops_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/end_time_entry"
	        android:text="@string/clear_button_text" />

	    <Button
	        android:id="@+id/reset_total_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/oops_button"
	        android:layout_alignBottom="@+id/oops_button"
	        android:layout_alignLeft="@+id/total"
	        android:text="@string/reset_button_text" />

</RelativeLayout>